--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 flask==1.1.2
-flask-sqlalchemy==2.4.3
-flask-migrate==2.5.3
+# flask-sqlalchemy==2.4.3
+# flask-migrate==2.5.3
+numpy==1.19.0
+scipy==1.5.1
