--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,11 @@ Flask-HTTPAuth==4.1.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.3
 Flask-Uploads==0.2.1
+# Notice: to fix the flask_uploads module, 
+# go to the file: <virtual environment name>\Lib\site-packages\flask_uploads.py
+# and redo line 26 "from werkzeug import secure_filename, FileStorage" to
+# "from werkzeug.utils import secure_filename" and
+# "from werkzeug.datastructures import FileStorage"
 httpie==2.2.0
 idna==2.10
 itsdangerous==1.1.0
